<resources>
    <string name="app_name">Count Down Game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Count Down</string>
    <string name="nav_header_subtitle">vancsa.isti@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_welcome">Welcome</string>
    <string name="menu_game">Game</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_high_score">High Scores</string>
    <string name="menu_share">Share</string>
</resources>
