<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_welcome" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_game"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_new_game"
            android:icon="@drawable/ic_new_game"
            android:title="@string/menu_new_game" />
        <item
            android:id="@+id/nav_high_score"
            android:icon="@drawable/ic_high_score"
            android:title="@string/menu_high_score" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
