<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.example.countdownproject.ui.welcome.WelcomeFragment"
        android:label="@string/menu_welcome"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.countdownproject.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_new_game"
        android:name="com.example.countdownproject.ui.game.GameFragment"
        android:label="@string/menu_new_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_high_score"
        android:name="com.example.countdownproject.ui.highScore.HighScoreFragment"
        android:label="@string/menu_high_score"
        tools:layout="@layout/fragment_high_score" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.countdownproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
</navigation>